--- a/local.properties
+++ b/local.properties
@@ -10,14 +10,14 @@ keystore.key_alias=geoip
 keystore.password=geoipclash
 keystore.key_password=geoipclash
 
-project.geoip_mmdb_url=https\://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+project.geoip_mmdb_url=https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 
 project.package_name=com.github.geoipcn
 project.package_label=GeoIP2-CN
 project.versionCode=1
 project.versionName=1.0.0
 
-project.package_icon_url=https\://github.com/Dreamacro/clash/raw/master/docs/logo.png
+project.package_icon_url=https://github.com/Dreamacro/clash/raw/master/docs/logo.png
 
 sdk.dir=/Users/xuhaoyang/Android/sdk
 
